--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react-dom": "^17.0.2",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
