--- a/package.json
+++ b/package.json
@@ -9,24 +9,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/register": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
